# swe-vocab

./: .gitignore  README.md
.doc/: swedish_vocab_app_full_project_plan.md
app/: index.html  package-lock.json  package.json  tsconfig.json  (+1 more)
vocab-pipeline/: ATTRIBUTION.md  LICENSE_NOTES.md  README.md  pyproject.toml
vocab-pipeline/config/: cefr_levels.json  parts_of_speech.json
vocab-pipeline/config/field_mappings/: README.md  backbone_template.json  dictionary_template.json
vocab-pipeline/config/pack_rules/: README.md  default_pack_rules.json
vocab-pipeline/config/priority_rules/: README.md  default_priority_rules.json
vocab-pipeline/config/tag_rules/: README.md  default_tag_rules.json
vocab-pipeline/data/processed/: source_manifest.json  vocab_master.csv  vocab_master.json
vocab-pipeline/data/processed/levels/: A1.json  A2.json  B2.json
vocab-pipeline/data/processed/packs/: a1_core.json  b1_core.json  b2_core.json  starter_core.json
vocab-pipeline/data/raw/manual/: curated_examples.json
vocab-pipeline/data/raw/seed/: backbone_seed.json  dictionary_seed.json
vocab-pipeline/scripts/curate/: README.md
vocab-pipeline/scripts/export/: README.md  sync_app_data.py
vocab-pipeline/scripts/ingest/: README.md
vocab-pipeline/scripts/merge/: README.md
vocab-pipeline/scripts/validate/: validate_json.py
vocab-pipeline/tests/: test_pipeline.py  test_schema.py  test_seed_sync.py
vocab-pipeline/vocab_pipeline/: __init__.py  cli.py  config.py  curate.py  export.py  merge.py  normalize.py  pipeline.py  schema.py  seed.py  sync.py  validate.py
(+29 files in other folders)
